--- a/src/pages/Hero/hero.css
+++ b/src/pages/Hero/hero.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
 
-  gap: clamp(0.75rem, 2vw, 1rem);
+  gap: clamp(0.95rem, 2vw, 1rem);
 
   overflow-x: hidden;
 }
